 * Miscellaneous and bug fixes:
   * Fix bug #21961, Units are not attacking if the attack was issued from 
     more than one hex away.
   * Fix implementation bug in random number generator: rand_pool_ is now an
     unsigned long rather than an unsigned int.
   * Fix bug #21491: fix drag+drop for unit movements
   * Fix bug #21448: make premoved units selection like in Wesnoth 1.10

Version 1.11.13:
 * AI:
   * Messenger Escort Micro AI: bug fix for escort units blocking messenger's
     progress
   * Several Micro AIs: fix a variety of rarely occurring but serious bugs, such
     as invalid savegames or disabling the AI from working for the rest of the
     turn or after changing the Micro AI settings.
   * Bug fix for requiring unnecessary keys for removal of several Micro AIs
   * Some internal reorganization of Micro AI code to facilitate customizing
     them for UMC and adding functionality from other versions of Wesnoth. Some
     code cleanup for consistency, readability and speed, as well as fixing of
     some minor and subtle bugs.
 * Campaigns:
   * Eastern Invasion:
     * In 'Captured', stolen gold won't be mentioned if the player had no
       carryover gold.
   * Son of the Black Eye: some minor changes
     * S2: adjusted starting villages; scenario now ends if Kapou'e is already
       on the signpost when the messenger comes back
     * S3: make objectives consistent between before and after trolls appear
     * S6: remove AI controller.  It doesn't work with sides without a leader
 * Engine
   * MP server now commits controller changes to the replay rather than updating
     as we go along. Among other things these means that players that join an
     scenario with ai sides which has already started won't have corrupted
     controller types which would prevent them from successfully saving and
     reloading in the future.
     We have also moved all "controller tweaks" associated to the start of MP