@@ -8,6 +8,7 @@ Version 1.11.13+dev:
  * Miscellaneous and bug fixes:
    * Fix bug stopping drag+drop for unit movements
    * Revert premoved units selection to Wesnoth 1.10 behavior (#21448)
+   * Fix unit move continuation if enemy discovered (#21372)
 
    
 Version 1.11.13:
